# punq

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  README.rst  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements-test.txt  setup.py  sitemap.xml  tox.ini
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: constraints.txt  labeler.yml  main.yml  on-release-main.yml  pr.yml  release.yml  tests.yml  validate-codecov-config.yml
docs/: Makefile  conf.py  index.md  index.rst  modules.md
docs/source/: api.rst  conf.py  index.rst
modules/: index.html
punq/: __init__.py  _compat.py  py_36.py  py_37.py
search/: search_index.json
src/: setup.py
src/punq/: __init__.py
src/tests/: test_instance_creation.py
tests/: conftest.py  doctest_namespace.py  test_annotated_types.py  test_auto_registration.py  test_cache.py  test_chain_dependencies.py  test_container_child.py  test_context_var.py  test_dependencies.py  test_dynamic_dependencies.py  test_instance_creation.py  test_kwarg_defaults.py  test_kwonly_deps.py  test_list_resolution.py  test_name_conflicts.py  test_resolution_scope.py  test_scoped_resolution.py  test_string_annotations.py  test_typing.py
tests/conflicts/: conflicting.py  str_annotations.py  type_annotations.py
typesafety/: test_container.py
